# Toasty

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
test/: CMakeLists.txt
test/src/: main.cpp
toasty/: CMakeLists.txt
toasty/include/: toasty.h
toasty/src/: api.cpp  toast.cpp
